--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
  }
 
  .bg-image{
-  background-image: url(\img\oc.png);
+  background-image: url(oc.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 400px;
