--- a/homepage.css
+++ b/homepage.css
@@ -23,16 +23,18 @@ body{
     display: flex;
     border-radius: 0% 10% 10% 0% / 0% 10% 10% 0%;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 40px;
     align-items: center;
     box-shadow: 3.5px 0 0 3px #244a1d;
+    justify-content: space-between;
 }
 
 
 .nav ul{
     width: 85%;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
     
 }
 .nav ul li{
@@ -100,6 +102,45 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+}
+
+.logout li{
+    position: relative;
+    color: aliceblue;
+    width: 100%;
+    height: 50px;
+    border: 0px solid;
+    background-color: transparent;
+    text-align: left;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;    
+    margin-top: 30px;
+    justify-content: center;
+    cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+
+}
+
+.logout{
+   
+}
+
+.logout li i {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border: 0px solid;
+    font-size: 25px;
+    text-align: left;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  
     cursor: pointer;
 }
 
